@@ -1,5 +1,6 @@
 0.11.6
- - fix: unselected license in upload dialog if CC-BY-SA-4.0 unavailable
+ - fix: set visibility to private based on available licenses
+ - enh: unselected license in upload dialog for example data
 0.11.5
  - enh: increase logging verbosity
  - setup: bump dclab from 0.43.0 to 0.43.1
